@@ -35,6 +35,7 @@ import org.apache.hadoop.yarn.util.Records;
 @Public
 @Stable
 public abstract class ContainerId implements Comparable<ContainerId>{
+  public static final long CONTAINER_ID_BITMASK = 0xffffffffffL;
   private static final Splitter _SPLITTER = Splitter.on('_').trimResults();
   private static final String CONTAINER_PREFIX = "container";
   private static final String EPOCH_PREFIX = "e";
@@ -81,6 +82,7 @@ public abstract class ContainerId implements Comparable<ContainerId>{
    * @return lower 32 bits of identifier of the <code>ContainerId</code>
    */
   @Public
+  @Deprecated
   @Stable
   public abstract int getId();
 
@@ -184,7 +186,8 @@ public abstract class ContainerId implements Comparable<ContainerId>{
     sb.append(
         appAttemptIdAndEpochFormat.get().format(
             getApplicationAttemptId().getAttemptId())).append("_");
-    sb.append(containerIdFormat.get().format(0xffffffffffL & getContainerId()));
+    sb.append(containerIdFormat.get()
+        .format(CONTAINER_ID_BITMASK & getContainerId()));
     return sb.toString();
   }
 
